--- a/ui/index.html
+++ b/ui/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Synora UI Start</title>
+  <title>Synora 中文界面</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
@@ -28,17 +28,21 @@
     <header class="mb-4 flex flex-wrap items-center justify-between gap-2">
       <div class="flex items-center gap-2.5">
         <span class="h-3 w-3 rounded-full bg-gradient-to-br from-teal-700 to-teal-400"></span>
-        <h1 class="m-0 text-xl font-bold tracking-tight">Synora UI Start</h1>
+        <h1 id="titleText" class="m-0 text-xl font-bold tracking-tight">Synora 中文界面</h1>
       </div>
-      <p class="m-0 text-sm text-stone-500">Phase 9 UI bootstrap for `ui search` / `ui action-run`</p>
+      <div class="flex items-center gap-2">
+        <p id="subtitleText" class="m-0 text-sm text-stone-500">Phase 9：`ui search` / `ui action-run` 可视化入口</p>
+        <button id="langZhBtn" class="rounded-md bg-stone-800 px-2 py-1 text-xs font-semibold text-white">中文</button>
+        <button id="langEnBtn" class="rounded-md border border-stone-400 bg-white px-2 py-1 text-xs font-semibold text-stone-700">EN</button>
+      </div>
     </header>
 
     <section class="mb-3 rounded-xl border border-stone-300 bg-amber-50/70 p-3.5 shadow-sm ring-1 ring-emerald-100">
-      <label for="queryInput" class="mb-2 block text-sm font-semibold">Search Query</label>
+      <label id="queryLabel" for="queryInput" class="mb-2 block text-sm font-semibold">搜索关键词</label>
       <div class="flex flex-col gap-2 sm:flex-row">
         <input id="queryInput" type="text" value="PowerToys" class="w-full rounded-lg border border-stone-300 bg-white px-3 py-2.5 font-mono text-sm outline-none focus:border-teal-600" />
-        <button id="searchCmdBtn" class="rounded-lg bg-teal-700 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">Build Search Command</button>
-        <button id="liveSearchBtn" class="rounded-lg bg-slate-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">Live Search</button>
+        <button id="searchCmdBtn" class="rounded-lg bg-teal-700 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">生成搜索命令</button>
+        <button id="liveSearchBtn" class="rounded-lg bg-slate-800 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">实时搜索</button>
       </div>
       <p id="searchCmdOut" class="mt-2 min-h-10 whitespace-pre-wrap rounded-lg border border-dashed border-stone-400 bg-stone-100 px-3 py-2 font-mono text-sm"></p>
       <p id="liveSearchMeta" class="mt-1 text-sm text-stone-500"></p>
@@ -46,8 +50,8 @@
 
     <section class="mb-3 rounded-xl border border-stone-300 bg-amber-50/70 p-3.5 shadow-sm ring-1 ring-orange-100">
       <div class="mb-2.5 flex items-center justify-between gap-2">
-        <h2 class="m-0 text-base font-semibold">Paste `ui search --json` Payload</h2>
-        <button id="renderBtn" class="rounded-lg bg-orange-700 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">Render Results</button>
+        <h2 id="payloadTitle" class="m-0 text-base font-semibold">粘贴 `ui search --json` 输出</h2>
+        <button id="renderBtn" class="rounded-lg bg-orange-700 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">渲染结果</button>
       </div>
       <textarea id="payloadInput" spellcheck="false" aria-label="JSON payload" class="min-h-56 w-full resize-y rounded-lg border border-stone-300 bg-white px-3 py-2.5 font-mono text-sm outline-none focus:border-orange-700"></textarea>
       <p id="payloadErr" class="mt-2 min-h-4 text-sm text-red-800"></p>
@@ -55,28 +59,28 @@
 
     <section class="mb-3 rounded-xl border border-stone-300 bg-amber-50/70 p-3.5 shadow-sm ring-1 ring-zinc-200">
       <div class="mb-2.5 flex items-center justify-between gap-2">
-        <h2 class="m-0 text-base font-semibold">Result Groups</h2>
+        <h2 id="groupTitle" class="m-0 text-base font-semibold">结果分组</h2>
         <span id="resultMeta" class="text-sm text-stone-500"></span>
       </div>
       <div class="mb-3 flex flex-wrap items-end gap-2">
-        <label class="text-xs text-stone-600">
-          Risk
+        <label id="riskLabel" class="text-xs text-stone-600">
+          风险等级
           <select id="riskFilter" class="mt-1 block rounded-md border border-stone-300 bg-white px-2 py-1 text-sm">
-            <option value="all">all</option>
-            <option value="low">low</option>
-            <option value="medium">medium</option>
-            <option value="high">high</option>
+            <option value="all">全部</option>
+            <option value="low">低</option>
+            <option value="medium">中</option>
+            <option value="high">高</option>
           </select>
         </label>
-        <label class="text-xs text-stone-600">
-          Group
+        <label id="typeLabel" class="text-xs text-stone-600">
+          分组类型
           <select id="groupFilter" class="mt-1 block rounded-md border border-stone-300 bg-white px-2 py-1 text-sm">
-            <option value="all">all</option>
-            <option value="software">software</option>
-            <option value="source">source</option>
-            <option value="update">update</option>
-            <option value="download">download</option>
-            <option value="ai">ai</option>
+            <option value="all">全部</option>
+            <option value="software">软件</option>
+            <option value="source">来源</option>
+            <option value="update">更新</option>
+            <option value="download">下载</option>
+            <option value="ai">AI</option>
           </select>
         </label>
       </div>
@@ -84,16 +88,16 @@
     </section>
 
     <section class="rounded-xl border border-stone-300 bg-amber-50/70 p-3.5 shadow-sm">
-      <h2 class="m-0 text-base font-semibold">Action Command</h2>
-      <p class="mb-2 mt-1 text-sm text-stone-500">Click any result card to generate a command.</p>
+      <h2 id="actionTitle" class="m-0 text-base font-semibold">动作命令</h2>
+      <p id="actionHint" class="mb-2 mt-1 text-sm text-stone-500">点击任意结果卡片生成命令。</p>
       <p id="actionCmdOut" class="min-h-10 whitespace-pre-wrap rounded-lg border border-dashed border-stone-400 bg-stone-100 px-3 py-2 font-mono text-sm"></p>
       <div class="mt-2 flex flex-wrap gap-2">
-        <button id="runActionBtn" class="rounded-lg bg-indigo-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">Run Action via API</button>
-        <button id="copyActionBtn" class="rounded-lg bg-stone-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">Copy Command</button>
+        <button id="runActionBtn" class="rounded-lg bg-indigo-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">通过 API 执行动作</button>
+        <button id="copyActionBtn" class="rounded-lg bg-stone-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">复制命令</button>
         <span id="actionRunMeta" class="text-sm text-stone-500"></span>
       </div>
       <div class="mt-4">
-        <h3 class="m-0 text-sm font-semibold">Recent Commands</h3>
+        <h3 id="historyTitle" class="m-0 text-sm font-semibold">最近命令</h3>
         <div id="historyRoot" class="mt-2 grid gap-2"></div>
       </div>
     </section>
