--- a/ui/index.html
+++ b/ui/index.html
@@ -51,6 +51,15 @@
       <p id="liveSearchMeta" class="mt-1 text-sm text-stone-500"></p>
     </section>
 
+    <section class="mb-3 rounded-xl border border-stone-300 bg-white/80 p-3.5 shadow-sm ring-1 ring-sky-100">
+      <div class="mb-2.5 flex items-center justify-between gap-2">
+        <h2 id="capabilityTitle" class="m-0 text-base font-semibold">功能总览</h2>
+        <span id="capabilityMeta" class="text-xs text-stone-500"></span>
+      </div>
+      <p id="capabilitySubtitle" class="mb-3 text-sm text-stone-500">当前版本可用能力（按分类展示）</p>
+      <div id="capabilityRoot" class="grid gap-3"></div>
+    </section>
+
     <section class="mb-3 rounded-xl border border-stone-300 bg-amber-50/80 p-3.5 shadow-sm ring-1 ring-zinc-200">
       <div class="mb-2.5 flex items-center justify-between gap-2">
         <h2 id="groupTitle" class="m-0 text-base font-semibold">结果分组</h2>
@@ -96,24 +105,10 @@
           <textarea id="payloadInput" spellcheck="false" aria-label="JSON payload" class="min-h-48 w-full resize-y rounded-lg border border-stone-300 bg-white px-3 py-2.5 font-mono text-sm outline-none focus:border-orange-700"></textarea>
           <p id="payloadErr" class="mt-2 min-h-4 text-sm text-red-800"></p>
         </section>
-        <section class="rounded-lg border border-stone-300 bg-amber-50/70 p-3">
-          <h2 id="actionTitle" class="m-0 text-base font-semibold">动作命令</h2>
-          <p id="actionHint" class="mb-2 mt-1 text-sm text-stone-500">点击任意结果卡片生成命令。</p>
-          <p id="actionCmdOut" class="min-h-10 whitespace-pre-wrap rounded-lg border border-dashed border-stone-400 bg-stone-100 px-3 py-2 font-mono text-sm"></p>
-          <div class="mt-2 flex flex-wrap gap-2">
-            <button id="runActionBtn" class="rounded-lg bg-indigo-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">通过 API 执行动作</button>
-            <button id="searchCmdBtn" class="rounded-lg bg-teal-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">生成搜索命令</button>
-            <button id="copyActionBtn" class="rounded-lg bg-stone-700 px-3 py-2 text-sm font-semibold text-white shadow-sm transition hover:brightness-95">复制命令</button>
-            <span id="actionRunMeta" class="text-sm text-stone-500"></span>
-          </div>
-          <p id="searchCmdOut" class="mt-2 min-h-10 whitespace-pre-wrap rounded-lg border border-dashed border-stone-400 bg-stone-100 px-3 py-2 font-mono text-sm"></p>
-          <div class="mt-4">
-            <h3 id="historyTitle" class="m-0 text-sm font-semibold">最近命令</h3>
-            <div id="historyRoot" class="mt-2 grid gap-2"></div>
-          </div>
-        </section>
       </div>
     </details>
+
+    <p id="actionRunMeta" class="mt-3 text-sm text-stone-600"></p>
   </main>
 
   <script src="./app.js"></script>
