--- a/ui/index.html
+++ b/ui/index.html
@@ -53,11 +53,54 @@
 
     <section class="mb-3 rounded-xl border border-stone-300 bg-white/80 p-3.5 shadow-sm ring-1 ring-sky-100">
       <div class="mb-2.5 flex items-center justify-between gap-2">
-        <h2 id="capabilityTitle" class="m-0 text-base font-semibold">功能总览</h2>
-        <span id="capabilityMeta" class="text-xs text-stone-500"></span>
+        <h2 id="quickActionTitle" class="m-0 text-base font-semibold">快捷操作</h2>
+        <button id="openSettingsBtn" class="rounded-md border border-stone-300 bg-white px-2 py-1 text-xs text-stone-700">设置</button>
       </div>
-      <p id="capabilitySubtitle" class="mb-3 text-sm text-stone-500">当前版本可用能力（按分类展示）</p>
-      <div id="capabilityRoot" class="grid gap-3"></div>
+      <p id="quickActionSubtitle" class="mb-3 text-sm text-stone-500">常用动作按钮，点击后由后端执行</p>
+      <div class="grid gap-2 sm:grid-cols-2 lg:grid-cols-3">
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="update_check">检测可更新软件</button>
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="discover_scan">软件自动发现</button>
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="repo_sync">同步软件仓库</button>
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="ai_analyze">AI 整理分析</button>
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="ai_recommend">AI 安装建议</button>
+        <button class="op-btn rounded-lg border border-stone-300 bg-white px-3 py-2 text-left text-sm font-semibold hover:border-teal-500" data-op="ai_repair_plan">AI 修复方案</button>
+      </div>
+      <p id="quickActionMeta" class="mt-2 text-sm text-stone-600"></p>
+    </section>
+
+    <section id="settingsPanel" class="mb-3 hidden rounded-xl border border-stone-300 bg-white/80 p-3.5 shadow-sm ring-1 ring-purple-100">
+      <div class="mb-2.5 flex items-center justify-between gap-2">
+        <h2 id="settingsTitle" class="m-0 text-base font-semibold">设置</h2>
+        <button id="closeSettingsBtn" class="rounded-md border border-stone-300 bg-white px-2 py-1 text-xs text-stone-700">关闭</button>
+      </div>
+      <p id="settingsSubtitle" class="mb-3 text-sm text-stone-500">策略与系统参数（默认隐藏）</p>
+      <div class="grid gap-3 sm:grid-cols-2">
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingAutoUpdateLabel">轻量定时更新检测</span>
+          <input id="settingAutoUpdate" type="checkbox" class="h-4 w-4">
+        </label>
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingSignatureLabel">签名校验</span>
+          <input id="settingSignature" type="checkbox" class="h-4 w-4" checked>
+        </label>
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingAllowlistLabel">来源白名单</span>
+          <input id="settingAllowlist" type="checkbox" class="h-4 w-4" checked>
+        </label>
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingAuditLabel">审计记录</span>
+          <input id="settingAudit" type="checkbox" class="h-4 w-4" checked>
+        </label>
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingSchedulerLabel">Scheduler 定时入队</span>
+          <input id="settingScheduler" type="checkbox" class="h-4 w-4" checked>
+        </label>
+        <label class="flex items-center justify-between rounded-lg border border-stone-300 bg-white px-3 py-2 text-sm">
+          <span id="settingWorkerLabel">Worker 执行器</span>
+          <input id="settingWorker" type="checkbox" class="h-4 w-4" checked>
+        </label>
+      </div>
+      <p id="settingDiscoveryScope" class="mt-3 text-xs text-stone-500">Discovery 范围：Registry-only（只读）</p>
     </section>
 
     <section class="mb-3 rounded-xl border border-stone-300 bg-amber-50/80 p-3.5 shadow-sm ring-1 ring-zinc-200">
